# prescore-backend-rust

./: .gitignore  Cargo.toml  README.md  diesel.toml
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2024-04-24-084117_exam_user_total/: up.sql
migrations/2024-06-14-120632_upload_time/: up.sql
perm_macro/: Cargo.toml
perm_macro/src/: lib.rs
src/: handle.rs  main.rs  require.rs  schema.rs
src/declare/: exam.rs  mod.rs  paper.rs  user.rs  zhixue.rs
src/handler/: exam.rs  img.rs  mod.rs  paper.rs  token.rs  upload.rs
src/model/: exam.rs  exam_number.rs  mod.rs  paper.rs  user.rs
src/service/: config.rs  mod.rs  postgres.rs  zhixue.rs
src/utils/: mod.rs
