[package]
name = "prescore_be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = { version = "2.1.5", features = ["postgres", "r2d2"]}
postgres = "0.19.7"
reqwest = { version = "0.12.3", features = ["blocking", "json", "cookies"]}
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
yaml-rust = "0.4.5"
