[package]
name = "prescore_be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
adqselect = "0.1.3"
chrono = { version = "0.4.38", features = ["unstable-locales"] }
diesel = { version = "2.1.5", features = ["postgres", "r2d2"]}
float-ord = "0.3.2"
fontdb = "0.16.2"
liquid = "0.26.4"
postgres = "0.19.7"
reqwest = { version = "0.12.3", features = ["blocking", "json", "cookies"]}
resvg = "0.41.0"
rust_decimal = "1.35.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
state = "0.6.0"
tiny-skia = "0.11.4"
usvg = "0.41.0"
webp = "0.3.0"
yaml-rust = "0.4.5"
